syntax = "proto3";
package fuel;

import "google/protobuf/timestamp.proto";

service FuelService {
  rpc CreateFuel(CreateFuelRequest) returns (CreateFuelResponse);
  rpc GetByVehicle(GetByVehicleRequest) returns (GetByVehicleResponse);
  rpc GetReport(ReportRequest) returns (ReportResponse);
}

// DTO usado para creaci√≥n (no requiere todos los campos de FuelRecord)
message CreateFuelDto {
  string externalId = 1;
  string driverId = 2;
  string vehicleId = 3;
  string routeId = 4;
  double liters = 5;
  string fuelType = 6;
  string machineryType = 7; // "LIGHT" | "HEAVY"
  double odometer = 8;
  string gpsLocation = 9;
  string source = 10; // "manual" | "sensor" | "route-completion"
  double estimatedFuelL = 11;
  double distanceKm = 12;
  google.protobuf.Timestamp recordedAt = 13;
}

message CreateFuelRequest {
  CreateFuelDto record = 1;
}

message CreateFuelResponse {
  string id = 1;
  FuelRecord record = 2;
  bool isAnomaly=3;
  string message = 4;
}

message FuelRecord {
  string id = 1;
  string externalId = 2;
  string driverId = 3;
  string vehicleId = 4;
  string routeId = 5;
  double liters = 6;
  string fuelType = 7;
  string machineryType = 8;
  double odometer = 9;
  string gpsLocation = 10;
  string source = 11;
  double estimatedFuelL = 12;
  double distanceKm = 13;
  double deltaPercent = 14;
  google.protobuf.Timestamp recordedAt = 15;
  google.protobuf.Timestamp createdAt = 16;
  google.protobuf.Timestamp updatedAt = 17;
}

message GetByVehicleRequest {
  string vehicleId = 1;
  string from = 2; // ISO date string optional
  string to = 3;   // ISO date string optional
}

message GetByVehicleResponse {
  repeated FuelRecord records = 1;
  int32 anomaliesDetected = 2;
  repeated AnomalyRecord anomalyRecords = 3;
}

message ReportRequest {
  string from = 1;
  string to = 2;
  repeated string vehicleIds = 3;
  string machineryType = 4; // "LIGHT"|"HEAVY"
}

message AnomalyRecord {
  string recordId = 1;
  double deltaPercent = 2;
  double liters = 3;
  double estimatedFuelL = 4;
  double distanceKm = 5;
  google.protobuf.Timestamp recordedAt = 6;
}

message ReportItem {
  string vehicleId = 1;
  double totalLiters = 2;
  double avgLitersPerKm = 3;
  int32 recordsCount = 4;
  int32 anomaliesDetected = 5;
  repeated AnomalyRecord anomalyRecords = 6;
}

message ReportResponse {
  repeated ReportItem items = 1;
}
